5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1828_1651.log
== TEST (2019-06-12 14:45:36) 
-- CODE:
from numpy import*
x = input("Insira a string: ").upper().split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input().upper().split(,)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:52) 
-- CODE:
from numpy import*
x = input("Insira a string: ").split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input().split(,)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:53) 
-- CODE:
from numpy import*
x = input("Insira a string: ").split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input().split(,)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:58) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() .split(,)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:59) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() .split(,)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:45:59) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() .split(,)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:00) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() .split(,)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:07) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:09) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:10) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:10) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:11) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:11) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input(("Insira a string: ") .split(,))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:20) 
-- CODE:
from numpy import*
x = input("Insira a string: ") split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() split(,)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:21) 
-- CODE:
from numpy import*
x = input("Insira a string: ") split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() split(,)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:21) 
-- CODE:
from numpy import*
x = input("Insira a string: ") split(,)

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input() split(,)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:46:33) 
-- CODE:
from numpy import*
x = input("Insira a string: " .split(,))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 2
    x = input("Insira a string: " .split(,))
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:09) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(",")

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:47:20) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .upper() .split(",")

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:38) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .upper .split(",")

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == 1):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == 2):
		vet[2] = vet[2] + 1
	elif(x[i] == 3):
		vet[3] = vet[3] + 1
	elif(x[i] == 4):
		vet[4] = vet[4] + 1
	elif(x[i] == 5):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:55) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(",")

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == 1):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == 2):
		vet[2] = vet[2] + 1
	elif(x[i] == 3):
		vet[3] = vet[3] + 1
	elif(x[i] == 4):
		vet[4] = vet[4] + 1
	elif(x[i] == 5):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:17) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(",")

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == 1):
		vet[0] = vet[0] + 1
	elif(x[i] == 2):
		vet[1] = vet[1] + 1
	elif(x[i] == 3):
		vet[2] = vet[2] + 1
	elif(x[i] == 4):
		vet[3] = vet[3] + 1
	elif(x[i] == 5):
		vet[4] = vet[4] + 1
	elif(x[i] == 6):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:51:34) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(",")

vet = zeros(6, dtype=int)
for i in range(size(x)):
	if(x[i] == 1):
		vet[0] = vet[0] + 1
	elif(x[i] == 2):
		vet[1] = vet[1] + 1
	elif(x[i] == 3):
		vet[2] = vet[2] + 1
	elif(x[i] == 4):
		vet[3] = vet[3] + 1
	elif(x[i] == 5):
		vet[4] = vet[4] + 1
	elif(x[i] == 6):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:52:36) 
-- CODE:
from numpy import*
x = input("Insira a string: ") .split(",")

vet = zeros(6, dtype=int)
for i in range(size(x)):
	if(x[i] == i[0]):
		vet[0] = vet[0] + 1
	elif(x[i] == i[1]):
		vet[1] = vet[1] + 1
	elif(x[i] == i[2]):
		vet[2] = vet[2] + 1
	elif(x[i] == i[3]):
		vet[3] = vet[3] + 1
	elif(x[i] == i[4]):
		vet[4] = vet[4] + 1
	elif(x[i] == i[5]):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:26) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .upper() .split(","))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:39:47) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") .split(","))

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:24) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") 

vet = zeros(6)
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 4
    vet = zeros(6)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:40:48) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") 

vet = zeros(6).split(",")
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 4
    vet = zeros(6).split(",")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:41:04) 
-- CODE:
from numpy import*
x = input(("Insira a string: ") 

vet = zeros(6 .split(","))
for i in range(size(x)):
	if(x[i] == MC):
		vet[0] = vet[0] + 1
	elif(x[i] == C):
		vet[1] = vet[1] + 1
	elif(x[i] == CM):
		vet[2] = vet[2] + 1
	elif(x[i] == EM):
		vet[3] = vet[3] + 1
	elif(x[i] == E):
		vet[4] = vet[4] + 1
	elif(x[i] == ME):
		vet[5] = vet[5] + 1

print(max(vet))
print(vet)
	
	
-- ERROR:
File "XXXX", line 4
    vet = zeros(6 .split(","))
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
